fixes horizontal scroll issue on project pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -352,7 +352,11 @@ a:hover {
   margin-top:0;
 }
 
-/* project post content section */
+.project-page {
+  margin:0;
+  padding: 30px 0;
+}
+/* project post main paragraph section */
 .post-content {
   font-family: "brandon-grotesque",sans-serif;
   color: #f7eedf;
@@ -360,7 +364,7 @@ a:hover {
   font-weight: 100;
   margin-bottom: 30px;
   padding-top: 15px;
-  padding-left: 50px;
+  padding-left: 45px;
   padding-right: 100px;
   line-height: 1.7;
   /* letter-spacing: 0.3em */
@@ -396,7 +400,7 @@ a:hover {
 .sidebar {
   font-family: "brandon-grotesque",sans-serif;
   font-weight: 100;
-  padding: 20px 30px 20px 100px;  
+  padding: 20px 30px 20px 85px;  
 }
 /* XL desktop */
 @media (min-width: 1900px) {
